# py-can-access-google-page

./: .coverage  .flake8  .gitignore  .reviewrelatedfiles  README.md  checklist.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_functions_by_themselves.txt
.github/workflows/: test.yml
app/: Untitled Diagram.drawio  main.py  test.py  test_main.py  wtest_main.py
new_venv/: pyvenv.cfg
new_venv/Scripts/: Activate.ps1  activate  activate.bat
tests/: test_main.py  test_tests.py
